--- a/package.json
+++ b/package.json
@@ -42,18 +42,22 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "denoify": "^0.11.0",
-    "eslint": "^8.15.0",
-    "eslint-config-prettier": "^8.3.0",
-    "np": "^7.6.1",
-    "prettier": "^2.6.2",
-    "rimraf": "^3.0.2",
-    "tslib": "^2.4.0",
-    "tsup": "^5.12.7",
-    "typescript": "^4.6.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "@vitest/coverage-v8": "^0.32.0",
+    "denoify": "^1.5.8",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "np": "^8.0.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "tslib": "^2.5.3",
+    "tsup": "^6.7.0",
+    "typescript": "^5.1.3",
     "vitest": "^0.32.0"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "publishConfig": {
     "access": "public",
