--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build": "rimraf dist deno_dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts && denoify",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
-    "release": "yarn build && np",
-    "test": "yarn lint && vitest run --coverage",
+    "release": "release-it",
+    "test": "pnpm run lint && vitest run --coverage",
     "test:run": "vitest run",
     "test:watch": "vitest --watch",
     "typecheck": "tsc --noEmit"
@@ -56,8 +56,9 @@
     "typescript": "^5.1.3",
     "vitest": "^0.32.0"
   },
+  "packageManager": "pnpm@8.6.1",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "publishConfig": {
     "access": "public",
