--- a/package.json
+++ b/package.json
@@ -32,14 +32,16 @@
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist deno_dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts && denoify",
+    "build": "rimraf dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts",
+    "build:deno": "rimraf deno_dist && denoify",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
     "release": "release-it",
     "test": "pnpm run lint && vitest run --coverage",
     "test:run": "vitest run",
     "test:watch": "vitest --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc",
+    "typecheck:watch": "tsc --watch"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
@@ -48,8 +50,8 @@
     "denoify": "^1.5.8",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
-    "np": "^8.0.2",
     "prettier": "^2.8.8",
+    "release-it": "^15.11.0",
     "rimraf": "^5.0.1",
     "tslib": "^2.5.3",
     "tsup": "^6.7.0",
@@ -60,5 +62,20 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "release-it": {
+    "hooks": {
+      "before:init": [
+        "pnpm test",
+        "pnpm run build:deno"
+      ]
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true,
+      "web": true
+    }
   }
 }
