--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typecheck:watch": "tsc --watch"
   },
   "devDependencies": {
+    "@types/node": "^20.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "@vitest/coverage-v8": "^0.32.0",
