--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erreur",
-  "version": "3.0.0-13",
+  "version": "3.0.0",
   "description": "Type safe custom errors",
   "keywords": [
     "error",
