--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,17 +10,18 @@
   "rules": {
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/consistent-type-imports": "error",
+    "@typescript-eslint/no-base-to-string": "off",
     "@typescript-eslint/no-empty-function": "off",
-    "@typescript-eslint/no-unsafe-argument": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-this-alias": "off",
+    "@typescript-eslint/no-unsafe-argument": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
     "@typescript-eslint/no-unsafe-member-access": "off",
     "@typescript-eslint/no-unsafe-return": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "no-constant-condition": "off",
-    "@typescript-eslint/no-base-to-string": "off"
+    "@typescript-eslint/unbound-method": "off",
+    "no-constant-condition": "off"
   }
 }
