--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/mod.js",
-        "default": "./dist/mod.d.ts"
+        "module": "./dist/mod.js",
+        "types": "./dist/mod.d.ts"
       },
       "require": {
-        "types": "./dist/mod.djs",
-        "default": "./dist/mod.d.cts"
+        "module": "./dist/mod.cjs",
+        "types": "./dist/mod.d.cts"
       }
     }
   },
@@ -37,8 +37,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts",
-    "build:watch": "tsup --watch --format cjs,esm src/mod.ts --dts src/mod.ts",
+    "build": "rimraf dist && tsup --format cjs,esm src/mod.ts --dts",
+    "build:watch": "tsup --watch --format cjs,esm src/mod.ts --dts",
     "changelog": "auto-changelog --stdout --hide-credit true --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
