--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,6 +6,7 @@
     "$std/": "https://deno.land/std@0.224.0/"
   },
   "tasks": {
-    "test:watch": "deno test --watch"
+    "test:watch": "deno test --watch",
+    "bump": "deno run -A jsr:@mys/bump@1"
   }
 }
